# small-os

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  boot.ld  build.rs  deny.toml  kernel.ld  linker.ld  rust-toolchain.toml
.cargo/: config.toml
bootloader/src/: stage1.asm  stage2.asm
bootloader/stage1/: disk.asm  macros.asm  main.asm  serial.asm
bootloader/stage2/: constants.asm  main.asm
bootloader/stage2/io/: print16.asm  print32.asm  print64.asm
bootloader/stage2/protected_mode/: paging.asm
bootloader/stage2/real_mode/: a20.asm  acpi.asm  disk.asm  memory.asm  vbe.asm
bootloader/stage3/: CMakeLists.txt  linker.ld  toolchain-x86_64-elf.cmake
bootloader/stage3/src/: boot_info.h  debug.c  debug.h  disk_probe.c  disk_probe.h  elf_loader.c  elf_loader.h  entry.asm  fat32.c  fat32.h  installer_protocol.h  libc.c  main.c  virtio_blk.c  virtio_blk.h
installer/: Cargo.toml
installer/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: flags.rs  lib.rs  macros.rs  main.rs  port.rs  qemu.rs
kernel/src/device/: mod.rs
kernel/src/driver/: mod.rs
kernel/src/interrupts/: gdt.rs  hardware_interrupt.rs  interrupt_index.rs  mod.rs
kernel/src/memory/: alloc.rs  bump.rs  dma_alloc.rs  mod.rs
kernel/src/memory/types/: mod.rs
kernel/src/memory/types/fixed_size_block/: mod.rs
kernel/src/memory/types/linked_list/: alloc.rs  mod.rs
kernel/src/screen/: mod.rs
kernel/src/task/: executor.rs  mod.rs  sleep.rs
kernel/src/task/shell/: history.rs  mod.rs  scancodes.rs
kernel/src/task/shell/commands/: cd.rs  echo.rs  help.rs  ls.rs  mkdir.rs  mod.rs  pwd.rs  sleep.rs  touch.rs
kernel/src/task/shell/tokenizer/: mod.rs  parser.rs
lib/boot/: Cargo.toml
lib/boot/src/: lib.rs
lib/bus/: Cargo.toml
lib/bus/src/: error.rs  lib.rs
lib/bus/src/pci/: caps.rs  device.rs  mod.rs
lib/device/: Cargo.toml
lib/device/src/: device_id.rs  error.rs  lib.rs  registry.rs
lib/driver/: Cargo.toml
lib/driver/block/: Cargo.toml
lib/driver/block/ahci_driver/: Cargo.toml
lib/driver/block/ahci_driver/src/: constants.rs  device.rs  fis.rs  lib.rs
lib/driver/block/src/: lib.rs
lib/driver/block/virtio_driver/: Cargo.toml
lib/driver/block/virtio_driver/src/: constants.rs  device.rs  lib.rs  queue.rs
lib/driver/core/: Cargo.toml
lib/driver/core/src/: cluster.rs  lib.rs  partition.rs  pci.rs  stream.rs
lib/driver/core/src/acpi_wrapper/: mod.rs
lib/driver/fs/: Cargo.toml
lib/driver/fs/ntfs_driver/: Cargo.toml
lib/driver/fs/ntfs_driver/src/: attr.rs  boot.rs  driver.rs  error.rs  index.rs  lib.rs  runs.rs  write.rs
lib/driver/fs/src/: lib.rs
lib/driver/src/: binding.rs  error.rs  lib.rs  match.rs  registry.rs
lib/driver/src/block/: mod.rs
lib/driver/src/block/ahci/: constants.rs  fis.rs  mod.rs  port.rs
lib/driver/src/block/ahci_driver/: constants.rs  fis.rs  mod.rs  port.rs
lib/driver/src/block/virtio/: constants.rs  mod.rs  queue.rs
lib/driver/src/block/virtio_driver/: constants.rs  mod.rs  queue.rs
lib/driver/src/core/: cluster.rs  mod.rs  pci.rs
lib/driver/src/core/acpi_wrapper/: mod.rs
lib/driver/src/core/partition/: mod.rs
lib/driver/src/core/partition/gpt/: error.rs  manager.rs  mod.rs  read.rs  structs.rs  write.rs
lib/driver/src/fs/: mod.rs
lib/driver/src/fs/ntfs/: attr.rs  boot.rs  error.rs  index.rs  mod.rs  runs.rs  types.rs  write.rs
lib/drivers/: Cargo.toml
lib/drivers/block/: Cargo.toml
lib/drivers/block/ahci_driver/: Cargo.toml
lib/drivers/block/ahci_driver/src/: lib.rs  port.rs
lib/drivers/block/src/: lib.rs
lib/drivers/block/virtio_driver/: Cargo.toml
lib/drivers/block/virtio_driver/src/: constants.rs  device.rs  lib.rs  queue.rs  request.rs
lib/drivers/core/: Cargo.toml
lib/drivers/core/src/: block_device.rs  cluster.rs  dma_allocator.rs  lib.rs  partition.rs  pci.rs  stream.rs
lib/drivers/fs/: Cargo.toml
lib/drivers/fs/ntfs_driver/: Cargo.toml
lib/drivers/fs/ntfs_driver/src/: attr.rs  boot.rs  driver.rs  error.rs  index.rs  lib.rs  runs.rs  types.rs  write.rs
lib/drivers/fs/src/: lib.rs
lib/drivers/src/: lib.rs
lib/hal/: Cargo.toml
lib/hal/src/: lib.rs
lib/hal/src/acpi/: error.rs  mod.rs
lib/hal/src/addr/: mod.rs
lib/hal/src/block/: error.rs  mod.rs
lib/hal/src/display/: mod.rs
lib/hal/src/dma/: mod.rs
lib/hal/src/fs/: error.rs  mod.rs
lib/hal/src/io/: error.rs  mod.rs
lib/hal/src/pci/: bar.rs  ecam.rs  mod.rs
lib/macros/: Cargo.toml
lib/macros/kernel_commands/: Cargo.toml
lib/macros/kernel_commands/src/: lib.rs
lib/macros/src/: lib.rs
lib/sync/: Cargo.toml
lib/vfs/: Cargo.toml
lib/vfs/src/: file.rs  inode.rs  lib.rs  mount.rs  path.rs
lib/vfs/src/fs/: mod.rs
lib/vfs/src/fs/ntfs/: attr.rs  boot.rs  error.rs  hal_impl.rs  index.rs  mod.rs  runs.rs  types.rs  vfs_adapter.rs  write.rs
lib/vfs/src/gpt/: manager.rs
lib/vfs/src/partition/: mod.rs
lib/vfs/src/partition/gpt/: error.rs  manager.rs  mod.rs  read.rs  write.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: create_disk.sh  toolchain.sh
src/: disk.rs  main.rs
xtask/: Cargo.toml
xtask/src/: build_stage3.rs  cache.rs  discover.rs  format.rs  hash.rs  main.rs  setup.rs
xtask/src/bootloader/: mod.rs
xtask/src/run/: mod.rs
xtask/src/setup/: mod.rs
