[workspace]
resolver = "3"
members = ["kernel"]

[package]
name = "os"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ovmf-prebuilt = "0.2.4"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.12"