[package]
name = "os"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "kernel",
    "lib/drivers",
    "lib/macros"
]

[profile.dev]
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Qemu
ovmf-prebuilt = "0.2.8"

# Macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
anyhow = "1.0.102"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.12"
