# ==============================================================================
# Workspace
# ==============================================================================
[workspace]
resolver = "3"
members = [
    "installer",
    "kernel",
    "lib/driver",
    "lib/macros",
    "lib/hal",
    "lib/boot",
    "lib/device",
    "lib/vfs",
    "lib/sync",
    "lib/bus",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sunnickel <git@alexander-reiter.at>"]
repository = "https://github.com/Sunnickel/small-os"

# ==============================================================================
# Profiles
# ==============================================================================

[profile.dev]
opt-level = "z"
codegen-units = 1
debug = 2
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.test]
opt-level = "z"
codegen-units = 1
panic = "abort"

# ==============================================================================
# Lints
# ==============================================================================
[workspace.lints.rust]
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Correctness / safety
unwrap_used = "warn"
float_arithmetic = "warn"

# Cleanliness
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Allowed
module_name_repetitions = "allow"


# ==============================================================================
# Workspace dependencies
# ==============================================================================

[workspace.dependencies]
# Custom
macros = { path = "lib/macros" }
driver = { path = "lib/driver" }
hal = { path = "lib/hal" }
vfs = { path = "lib/vfs" }
sync = { path = "lib/sync" }
bus = { path = "lib/bus" }
device = { path = "lib/device" }
boot = { path = "lib/boot" }
kernel = { path = "kernel" }

# Hardware / x86
x86_64 = { version = "0.15.4" }
pic8259 = { version = "0.11.0" }
uart_16550 = { version = "0.6.0" }
pc-keyboard = { version = "0.8.0", default-features = false }
acpi = { version = "6.1.1", default-features = false, features = ["alloc", "aml"] }

# Display
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }

# Concurrency / sync
spin = { version = "0.10.0" }
spinning_top = { version = "0.3.0", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
conquer-once = { version = "0.4.0", default-features = false }

# Collections / memory
heapless = { version = "0.9.2" }
linked_list_allocator = "0.10.5"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }

# Async
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }

# Proc-macro utilities (used by lib/macros)
proc-macro2 = { version = "1.0.106" }
quote = { version = "1.0.45" }
syn = { version = "2.0.117", features = ["full"] }

# Build tooling
anyhow = "1.0.102"

# XTask tooling
clap = { version = "4", features = ["derive"] }
rayon = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
dashmap = "6"
hex = "0.4.3"

# Drivers
bitflags = { version = "2.11.0" }
