[package]
name = "installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
test = false
harness = false

[lints]
workspace = true

[dependencies]
macros.workspace = true
driver.workspace = true
kernel.workspace = true
hal.workspace = true

bootloader_api.workspace = true
x86_64.workspace = true
