[package]
name = "installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "installer"
path = "src/main.rs"
test = false
harness = false

[lints]
workspace = true

[dependencies]
macros.workspace = true
driver.workspace = true
kernel.workspace = true
hal.workspace = true
boot.workspace = true

x86_64.workspace = true
