[package]
name = "installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "installer"
path = "src/main.rs"
test = false
harness = false

[lints]
workspace = true

[dependencies]
macros.workspace = true
kernel.workspace = true
driver.workspace = true
boot.workspace = true
device.workspace = true
hal.workspace = true
bus.workspace = true
vfs.workspace = true

x86_64.workspace = true
spin.workspace = true