[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
test = false

[dependencies]
macros = { path = "../lib/macros" }
driver = { path = "../lib/drivers" }

bootloader_api.workspace = true
font8x8.workspace = true
spinning_top.workspace = true
x86_64.workspace = true
lazy_static.workspace = true
pic8259.workspace = true
spin.workspace = true
uart_16550.workspace = true
heapless.workspace = true
pc-keyboard.workspace = true
linked_list_allocator.workspace = true
crossbeam-queue.workspace = true
conquer-once.workspace = true
futures-util.workspace = true
