[package]
name = "driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
test = false
harness = false

[dependencies]
hal.workspace = true
device.workspace = true
bus.workspace = true
spin.workspace = true
