[package]
name = "driver_fs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
test = false

[dependencies]
ntfs_driver = { path = "ntfs_driver" }
driver_core = { path = "../core" }
hal = { path = "../../hal" }

ahci_driver = { path = "../block/ahci_driver" }
virtio_driver = { path = "../block/virtio_driver" }
spin.workspace = true